Get end point added
