# src/routes/userRoutes.ts
@@ -11,4 +11,8 @@ router.post('/register', userValidationRules(), validate, async (req : Request, 
   await userController.createUser(req, res);
 });
 
+router.get('/:id', async (req : Request, res : Response) => {
+  await userController.getUserById(req, res);
+});
+
 export default router;
